--- a/index.html
+++ b/index.html
@@ -1929,6 +1929,303 @@
                 </div>
             </div>
           </section>
+          <section class="stocks">
+            <div class="stokcs__container wrapper">
+                <div class="stocks__content">
+                    <h2 class="stocks__title title">Акции</h2>
+                    <div class=" slider slider-stocks">
+                        <div class="slider__wrapper">
+                            <div class="slider__content swiper ">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide item-stocks">
+                                        <div class="item-stocks__img">
+                                            <img src="./img/01.jpg" alt="picture">
+                                        </div>
+                                        <div class="item-stocks__content">
+                                           <div class="item-stocks__body">
+                                                <div class="item-stocks__title">Новоселам</div>
+                                                <div class="item-stocks__text">
+                                                    Специальная скидка для тех кто переехал не более года назад
+                                                </div>
+                                           </div>
+                                            <div class="item-stocks__btn-wrapper">
+                                                <a href="javascript:void(0)" class="item-stocks__btn button button--green">
+                                                    Получить скидку
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide item-stocks">
+                                        <div class="item-stocks__img">
+                                            <img src="./img/02.jpg" alt="picture">
+                                        </div>
+                                        <div class="item-stocks__content">
+                                           <div class="item-stocks__body">
+                                                <div class="item-stocks__title">Молодоженам</div>
+                                                <div class="item-stocks__text">
+                                                    Спец.скидка если с момента регистрации прошло не более года
+                                                </div>
+                                           </div>
+                                            <div class="item-stocks__btn-wrapper">
+                                                <a href="javascript:void(0)" class="item-stocks__btn button button--green">
+                                                    Получить скидку
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide item-stocks">
+                                        <div class="item-stocks__img">
+                                            <img src="./img/03.jpg" alt="picture">
+                                        </div>
+                                        <div class="item-stocks__content">
+                                           <div class="item-stocks__body">
+                                                <div class="item-stocks__title">Пенсионерам</div>
+                                                <div class="item-stocks__text">
+                                                    Специальная скидка для наших дорогих
+                                                </div>
+                                           </div>
+                                            <div class="item-stocks__btn-wrapper">
+                                                <a href="javascript:void(0)" class="item-stocks__btn button button--green">
+                                                    Получить скидку
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider-pagination"></div>
+                        </div>
+                    </div>
+                    <div class="stocks__wrapper-btn">
+                        <a href="javascript:void(0)" class="stocks__btn button">Все акции</a>
+                    </div>
+                </div>
+            </div>
+          </section>
+          <section class="work">
+            <div class="work__container wrapper">
+                <div class="work__content">
+                    <div class="work__top">
+                        <h2 class="work__title title">Как мы работаем</h2>
+                        <p class="work__text">
+                            Вам понятен каждый этап: фиксированные сроки 
+                            и цены, предоставляем все документы: 
+                            накладные, гарантии, акты. 
+                            Вы будете уверены в результате.
+                        </p>
+                    </div>
+                    <div class="work__grid">
+                        <div class="work__row">
+                            <div class="work-item">
+                                <div class="work-item__content">
+                                    <div class="work-item__icon">
+                                        <img src="./img/icon3.png" alt="icon">
+                                    </div>
+                                    <div class="work-item__description">
+                                        Бесплатный выезд замерщика
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="work-item">
+                                <div class="work-item__content">
+                                    <div class="work-item__icon">
+                                        <img src="./img/a6.png" alt="icon">
+                                    </div>
+                                    <div class="work-item__description">
+                                        Смета в день обращения
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="work-item">
+                                <div class="work-item__content">
+                                    <div class="work-item__icon">
+                                        <img src="./img/a1.png" alt="icon">
+                                    </div>
+                                    <div class="work-item__description">
+                                        Договор
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="work-item">
+                                <div class="work-item__content">
+                                    <div class="work-item__icon">
+                                        <img src="./img/a2.png" alt="icon">
+                                    </div>
+                                    <div class="work-item__description">
+                                        Накладные материалы
+                                    </div>
+                                </div>
+                            </div>
+                           
+                        </div>
+                        <div class="work__row">
+                            
+                            <div class="work-item">
+                                <div class="work-item__content">
+                                    <div class="work-item__icon">
+                                        <img src="./img/a3.png" alt="icon">
+                                    </div>
+                                    <div class="work-item__description">
+                                        Контроль: фотоотчёт 
+                                        или видеонаблюдение
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="work-item">
+                                <div class="work-item__content">
+                                    <div class="work-item__icon">
+                                        <img src="./img/a4.png" alt="icon">
+                                    </div>
+                                    <div class="work-item__description">
+                                        Акт выполненных работ
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="work-item">
+                                <div class="work-item__content">
+                                    <div class="work-item__icon">
+                                        <img src="./img/icon1.png" alt="icon">
+                                    </div>
+                                    <div class="work-item__description">
+                                        Акт приемки работ по договору
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="work-item">
+                                <div class="work-item__content">
+                                    <div class="work-item__icon">
+                                        <img src="./img/a5.png" alt="icon">
+                                    </div>
+                                    <div class="work-item__description">
+                                        Гарантия на выполненные работы
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </section>
+          <section class="materiel">
+            <div class="materiel__container wrapper">
+                <div class="materiel__content">
+                    <h2 class="materiel__title title">
+                        Свой склад и шоурум материалов наших партнеров в Москве
+                    </h2>
+                    <div class="materiel__grid">
+                        <div class="materiel__item">
+                            <div class="materiel__icon">
+                                <img src="./img/a1.png" alt="icon">
+                            </div>
+                            <div class="materiel__text">
+                                Прямой договор с поставщиками
+                            </div>
+                        </div>
+                        <div class="materiel__item">
+                            <div class="materiel__icon">
+                                <img src="./img/b1.png" alt="icon">
+                            </div>
+                            <div class="materiel__text">
+                                Доставка и подьём в квартиру
+                            </div>
+                        </div>
+                        <div class="materiel__item">
+                            <div class="materiel__icon">
+                                <img src="./img/b2.png" alt="icon">
+                            </div>
+                            <div class="materiel__text">
+                                300 тонн черновых и чистовых материалов
+                            </div>
+                        </div>
+                        <div class="materiel__item">
+                            <div class="materiel__icon">
+                                <img src="./img/b3.png" alt="icon">
+                            </div>
+                            <div class="materiel__text">
+                                Выезд специалиста с каталогом материалов
+                            </div>
+                        </div>
+                        <div class="materiel__item">
+                            <div class="materiel__icon">
+                                <img src="./img/b4.png" alt="icon">
+                            </div>
+                            <div class="materiel__text">
+                                250 видов обоев
+                                25 видов ламината
+                                50 видов плитки и плинтуса
+                            </div>
+                        </div>
+                    </div>
+                    <div class="materiel__row">
+                        <div class="materiel__img">
+                            <img src="./img/11.jpg" alt="materiel">
+                        </div>
+                        <div class="materiel__img">
+                            <img src="./img/12.jpg" alt="materiel">
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </section>
+          <section class="control">
+            <div class="control__container ">
+                <div class="control__content">
+                    <div class="control__top wrapper">
+                        <h2 class="control__title title">
+                            Многоуровневый контроль качества
+                        </h2>
+                        <div class="control__subtitle">
+                            Ремонтируем квартиры без дефектов благодаря многоуровневому контролю качества:
+                        </div>
+                    </div>
+                    <div class="control__bottom">
+                        <div class="control__img">
+                            <img src="./img/20.jpg" alt="personel">
+                        </div>
+                        <div class="control__grid">
+                            <div class="control__item">
+                                <div class="control__number"><span class="control__item-total">/05</span></div>
+                                <div class="control__title-item">Главный инженер</div>
+                                <div class="control__text">
+                                    Наблюдает за работой в режиме реального времени.
+                                     Проверяет поставщиков материалов и оборудования
+                                </div>
+                            </div>
+                            <div class="control__item">
+                                <div class="control__number"><span class="control__item-total">/05</span></div>
+                                <div class="control__title-item">Отдел технического конроля</div>
+                                <div class="control__text">
+                                    Наблюдает за работой в режиме реального времени.
+                                     Проверяет поставщиков материалов и оборудования
+                                </div>
+                            </div>
+                            <div class="control__item">
+                                <div class="control__number"><span class="control__item-total">/05</span></div>
+                                <div class="control__title-item">Видео и фото контроль</div>
+                                <div class="control__text">
+                                    Онлайн-контроль хода ремонта 24/7
+                                </div>
+                            </div>
+                            <div class="control__item">
+                                <div class="control__number"><span class="control__item-total">/05</span></div>
+                                <div class="control__title-item">Начальник участка</div>
+                                <div class="control__text">
+                                    Оценивает соответствие процесса ремонта условиям договора по срокам и стоимости.
+                                </div>
+                            </div>
+                            <div class="control__item">
+                                <div class="control__number"><span class="control__item-total">/05</span></div>
+                                <div class="control__title-item">Прораб</div>
+                                <div class="control__text">
+                                    Приезжает на объект 4-5 раз в неделю, контролирует работу мастеров.
+                                     Проверяет каждый этап по 120 пунктам соответсвия.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </section>
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
